--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.wattdepot</groupId>
-  <artifactId>wattdepot</artifactId>
-  <version>2.2.2-SNAPSHOT</version>
+  <artifactId>wattdepot3</artifactId>
+  <version>3.0.0-SNAPSHOT</version>
   <name>WattDepot</name>
   <url>https://github.com/csdl/wattdepot/</url>
   <packaging>jar</packaging>
@@ -12,7 +12,7 @@
   </prerequisites>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<targetJdk>1.6</targetJdk>
+	<targetJdk>1.7</targetJdk>
 	
 	<!-- Dependency Versions -->
 	<berkeleydb.version>5.0.73</berkeleydb.version>
