Getting initial HTTP API framework in place. No persistence yet or reall results.

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,16 @@
 			<artifactId>org.restlet.ext.jetty</artifactId>
 			<version>${restlet.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.restlet.jse</groupId>
+            <artifactId>org.restlet.ext.crypto</artifactId>
+            <version>${restlet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.restlet.jse</groupId>
+            <artifactId>org.restlet.ext.freemarker</artifactId>
+            <version>${restlet.version}</version>
+        </dependency>
 	</dependencies>
 	<repositories>
 		<repository>
