--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 		<modbus-jamod.version>1.2</modbus-jamod.version>
 		<opencsv.version>2.3</opencsv.version>
 		<pool.version>1.6</pool.version>
+        <postgres.version>9.1-901-1.jdbc4</postgres.version>
 		<restlet.version>2.1.2</restlet.version>
 
 		<!-- Maven Plugin Versions -->
@@ -164,6 +165,16 @@
 		</dependency>
         <dependency>
             <groupId>org.restlet.jse</groupId>
+            <artifactId>org.restlet.ext.jackson</artifactId>
+            <version>${restlet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.restlet.jse</groupId>
+            <artifactId>org.restlet.ext.xstream</artifactId>
+            <version>${restlet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.restlet.jse</groupId>
             <artifactId>org.restlet.ext.crypto</artifactId>
             <version>${restlet.version}</version>
         </dependency>
@@ -171,6 +182,11 @@
             <groupId>org.restlet.jse</groupId>
             <artifactId>org.restlet.ext.freemarker</artifactId>
             <version>${restlet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgres.version}</version>
         </dependency>
 	</dependencies>
 	<repositories>
