--- a/pom.xml
+++ b/pom.xml
@@ -24,15 +24,16 @@
         <tomcat.jdbc.version>7.0.42</tomcat.jdbc.version>
         <google-collections.version>1.0-rc2</google-collections.version>
         <google-visualization-java.version>1.0.2</google-visualization-java.version>
-        <h2.version>1.2.145</h2.version>
+        <h2.version>1.3.174</h2.version>
         <hibernate.version>3.2.6.ga</hibernate.version>
         <hibernate-annotations.version>3.3.1.GA</hibernate-annotations.version>
         <hibernate-core.version>4.2.4.Final</hibernate-core.version>
         <httpunit.version>1.7</httpunit.version>
-        <icu4j.version>51.2</icu4j.version>
+        <icu4j.version>52.1</icu4j.version>
         <jasypt.version>1.9.1</jasypt.version>
         <jcs.version>1.3</jcs.version>
-        <json.version>20090211</json.version>
+        <jscience.version>4.3.1</jscience.version>
+        <json.version>20131018</json.version>
         <junit.version>4.11</junit.version>
         <modbus-jamod.version>1.2</modbus-jamod.version>
         <opencsv.version>2.3</opencsv.version>
@@ -194,6 +195,11 @@
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgres.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jscience</groupId>
+            <artifactId>jscience</artifactId>
+            <version>${jscience.version}</version>
         </dependency>
     </dependencies>
     <repositories>
