--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <commons-cli.version>1.2</commons-cli.version>
         <commons-lang.version>2.6</commons-lang.version>
         <commons-logging.version>1.1.3</commons-logging.version>
+        <commons-validator.version>1.3.1</commons-validator.version>
         <concurrent.version>1.0</concurrent.version>
         <dbcp.version>1.4</dbcp.version>
         <tomcat.jdbc.version>7.0.42</tomcat.jdbc.version>
@@ -82,6 +83,11 @@
             <groupId>commons-pool</groupId>
             <artifactId>commons-pool</artifactId>
             <version>${pool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>${commons-validator.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.collections</groupId>
@@ -150,7 +156,8 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-c3p0</artifactId>
             <version>${hibernate-core.version}</version>
-        </dependency>        <dependency>
+        </dependency>
+        <dependency>
             <groupId>org.jasypt</groupId>
             <artifactId>jasypt</artifactId>
             <version>${jasypt.version}</version>
