Found Session open close problem.

--- a/src/main/java/org/wattdepot3/server/log.properties
+++ b/src/main/java/org/wattdepot3/server/log.properties
@@ -18,7 +18,8 @@ handlers=java.util.logging.FileHandler java.util.logging.ConsoleHandler
 
 .level=INFO
 org.mortbay.level=WARNING
-org.restlet.level=ALL
+org.restlet.level=INFO
+org.hibernate.level=SEVERE
 
 WattDepot3.AccessLog.handlers=org.restlet.engine.log.AccessLogFileHandler
 WattDepot3.AccessLog.useParentHandlers=false
