--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <commons-cli.version>1.2</commons-cli.version>
         <commons-lang.version>2.6</commons-lang.version>
         <commons-logging.version>1.1.3</commons-logging.version>
-        <commons-validator.version>1.3.1</commons-validator.version>
+        <commons-validator.version>1.4.0</commons-validator.version>
         <concurrent.version>1.0</concurrent.version>
         <dbcp.version>1.4</dbcp.version>
         <tomcat.jdbc.version>7.0.42</tomcat.jdbc.version>
@@ -41,7 +41,7 @@
         <hibernate-core.version>4.2.4.Final</hibernate-core.version>
         <httpunit.version>1.7</httpunit.version>
         <icu4j.version>52.1</icu4j.version>
-        <jackson.version>1.8.5</jackson.version>
+        <jackson.version>1.9.11</jackson.version>
         <jasypt.version>1.9.1</jasypt.version>
         <jcs.version>1.3</jcs.version>
         <jscience.version>4.3.1</jscience.version>
@@ -49,6 +49,7 @@
         <junit.version>4.11</junit.version>
         <modbus-jamod.version>1.2</modbus-jamod.version>
         <opencsv.version>2.3</opencsv.version>
+        <oro.version>2.0.8</oro.version>
         <pool.version>1.6</pool.version>
         <postgres.version>9.1-901-1.jdbc4</postgres.version>
         <rabbitmq.version>3.2.1</rabbitmq.version>
@@ -130,11 +131,6 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>oro</groupId>
-            <artifactId>oro</artifactId>
-            <version>2.0.8</version>
         </dependency>
         <dependency>
             <groupId>httpunit</groupId>
@@ -229,6 +225,11 @@
             <groupId>org.restlet.jse</groupId>
             <artifactId>org.restlet.ext.freemarker</artifactId>
             <version>${restlet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>oro</groupId>
+            <artifactId>oro</artifactId>
+            <version>${oro.version}</version>
         </dependency>
         <dependency>
             <groupId>postgresql</groupId>
